Blender Geometry Node: Incorrect transfer of edge vertices index #94344

Closed
opened 2021-12-23 16:04:13 +01:00 by Iliya Katushenock · 6 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-23 00:38, hash: 1931387799
Worked: (newest version of Blender that worked as expected)

The edge vertex index attributes exist correctly.
unknown (1).png
But their transfer by index is cut off. There is no way to get all the indices. On average, half do not work.
unknown (2).png
The position of the vertices also works correctly for the transfer.
Examples:
Error 1-1-2.blend
And
transfer_error1.blend

There is a suspicion that 0 is cut off - not true.
unknown (3).png

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-23 00:38, hash: `1931387799` Worked: (newest version of Blender that worked as expected) The edge vertex index attributes exist correctly. ![unknown (1).png](https://archive.blender.org/developer/F12773220/unknown__1_.png) But their transfer by index is cut off. There is no way to get all the indices. On average, half do not work. ![unknown (2).png](https://archive.blender.org/developer/F12773222/unknown__2_.png) The position of the vertices also works correctly for the transfer. Examples: [Error 1-1-2.blend](https://archive.blender.org/developer/F12773226/Error_1-1-2.blend) And [transfer_error1.blend](https://archive.blender.org/developer/F12773225/transfer_error1.blend) There is a suspicion that 0 is cut off - not true. ![unknown (3).png](https://archive.blender.org/developer/F12773227/unknown__3_.png)
Author
Member

Added subscriber: @mod_moder

Added subscriber: @mod_moder
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2021-12-23 23:17:24 +01:00
Member

Thanks for the report! The issue is simple to fix.

Thanks for the report! The issue is simple to fix.

This issue was referenced by 35bd6fe993

This issue was referenced by 35bd6fe993a11df8395f2ef740fd0afa38c77b61
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94344
No description provided.