Fix T94344: Incorrect size for edge vertices node output

This looks like a copy and paste error from the original commit.
The virtual array output used the number of mesh polygons instead
of the number of edges.